cleanup and fixing some spacing issues

--- a/tubearchivist/static/css/style.css
+++ b/tubearchivist/static/css/style.css
@@ -243,7 +243,7 @@ button:hover {
 
 /* top of page */
 .title-bar {
-    padding: 25px 0;
+    padding: 20px 0;
 }
 
 .sort {
@@ -283,13 +283,12 @@ button:hover {
     grid-template-columns: 1fr 1fr;
     border-bottom: 2px solid;
     border-color: var(--accent-font-dark);
-    margin-bottom: 20px;
+    margin: 15px 0;
 }
 
 .view-icons {
     display: flex;
     justify-content: end;
-    margin-top: 15px;
 }
 
 .view-icons img {
@@ -545,6 +544,10 @@ button:hover {
 
 .channel-item.grid > .info-box {
     display: block;
+}
+
+.channel-banner img {
+    width: 100%;
 }
 
 .channel-banner.grid {
